更新操作指南：添加图片更新机制说明

--- a/每周四更新操作指南.md
+++ b/每周四更新操作指南.md
@@ -30,6 +30,38 @@ git commit -m "更新FreeStyle图片资源 - $(date +%Y-%m-%d)"
 git push origin main
 ```
 
+## 🔄 图片更新机制说明
+
+### 更新方式选择
+
+**方式1：安全更新（推荐）**
+```bash
+./update_weekly_safe.sh
+```
+- ✅ 完全替换所有旧图片
+- ✅ 自动备份重要文件
+- ✅ 清理旧的图片文件夹
+- ✅ 确保只显示新图片
+
+**方式2：普通更新**
+```bash
+./update_weekly.sh
+```
+- ⚠️ 可能保留部分旧图片
+- ⚠️ 新旧图片可能混合显示
+- ✅ 操作更简单快速
+
+### 图片显示规则
+
+**网站显示的图片完全取决于：**
+1. `image_data.js` 文件中的图片列表
+2. 实际存在的图片文件
+
+**更新后的情况：**
+- 如果新更新包包含旧图片 → 继续显示
+- 如果新更新包不包含旧图片 → 不再显示
+- 如果新更新包有全新图片 → 新增显示
+
 ## 📋 给AI的指令模板
 
 ### 简单指令
